# controllers/tutorialsControllers.js
@@ -20,7 +20,7 @@ const createTutorial = async (req, res) => {
     published: req.body.published,
   });
   try {
-    const savedTutorial = await tutorial.save();
+    await tutorial.save();
     res.status(201).send();
   } catch (error) {
     res.status(500).send({ message: "Internal Server Error" });
@@ -35,12 +35,10 @@ const updateTutorial = async (req, res) => {
     if (typeof title !== "undefined") update.title = title;
     if (typeof description !== "undefined") update.description = description;
     if (typeof published !== "undefined") update.published = published;
-    const tutorialUpdate = await Tutorial.findByIdAndUpdate(
-      { _id: req.params.id },
-      update,
-      { new: true }
-    );
-    res.status(201).send();
+    await Tutorial.findByIdAndUpdate({ _id: req.params.id }, update, {
+      new: true,
+    });
+    res.status(204).send();
   } catch (error) {
     res.status(400).send({ message: "Invalid Tutorial Id" });
   }
@@ -49,7 +47,7 @@ const updateTutorial = async (req, res) => {
 // Delete a Tutorial by ID
 const deleteTutorial = async (req, res) => {
   try {
-    const tutorialRemove = await Tutorial.findByIdAndDelete(req.params.id);
+    await Tutorial.findByIdAndDelete(req.params.id);
     res.status(200).send();
   } catch (error) {
     res.status(400).send({ message: "Invalid Tutorial Id" });
@@ -60,7 +58,7 @@ const deleteTutorial = async (req, res) => {
 const getTutorialById = async (req, res) => {
   try {
     const tutorial = await Tutorial.findById(req.params.id);
-    res.status(200).send();
+    res.status(200).send(tutorial);
   } catch (error) {
     res.status(404).send({ message: "Tutorial not found" });
   }
